Bug 51442 - N() does not work with position dependent range intersection
Summary: N() does not work with position dependent range intersection
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.1 release
Hardware: All All
: medium major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3
Keywords: regression
Depends on:
Blocks: Calc-Function
  Show dependency treegraph
 
Reported: 2012-06-26 04:27 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2017-11-06 11:47 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
testcases (10.68 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-26 12:30 UTC, Eike Rathke (retired, only occasionally showing up)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2012-06-26 04:27:53 UTC
A1: 1
A2: 2
B1: =N(A1:A2)   => 1   ok
B2: =N(A1:A2)   => 1   wrong, expected 2

Regression of change for bug 33705.
Comment 1 Eike Rathke (retired, only occasionally showing up) 2012-06-26 07:10:49 UTC
Also, it ignores inline errors like =N(1/0) and converts them to 0 instead of propagating.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2012-06-26 08:39:22 UTC
Additionally array context doesn't work, e.g. {=N(A1:A2)} always displays evaluation of A1, but that never did so no regression there.
Comment 3 Not Assigned 2012-06-26 12:11:03 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d822c6afe6c1a676e9b86d67e599dbcf75512a7c

resolved fdo#51442 N() inconsistent argument handling
Comment 4 Not Assigned 2012-06-26 12:17:52 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/help/commit/?id=b6956a9dfce0057a1af539d3142bacf52c6bc31a

fdo#51442 adapted help content of N(), errors are propagated
Comment 5 Eike Rathke (retired, only occasionally showing up) 2012-06-26 12:30:45 UTC
Created attachment 63495 [details]
testcases
Comment 6 Eike Rathke (retired, only occasionally showing up) 2012-06-27 08:30:42 UTC
Additionally needed for dependency:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=5f86b4be3c40180031aa723f5fa44a19595bffa8
Comment 7 Andras Timar 2012-06-30 01:10:24 UTC
@Eike: If you want to cherry-pick this to libreoffice-3-6, please do it before the beta3 tag (2012-07-02, Monday), because that is the string freeze date and you patched the help. No review is required until rc1. Thanks!
Comment 8 Not Assigned 2012-07-02 02:28:57 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94f6289eb012aa69da25800b42eaa6e4c566168d&g=libreoffice-3-6

added mnStringNoValueError handling to ConvertStringToValue() (fdo#51442 dependency)


It will be available in LibreOffice 3.6.
Comment 9 Not Assigned 2012-07-02 02:29:21 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1cd5ceb0a9e3c4b31e2c68295a2e9fc3fc080749&g=libreoffice-3-6

resolved fdo#51442 N() inconsistent argument handling


It will be available in LibreOffice 3.6.
Comment 10 Not Assigned 2012-07-02 02:30:57 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/help/commit/?id=34e1ed8e3794b5f9b83c061a726b1d810df3265c&g=libreoffice-3-6

fdo#51442 adapted help content of N(), errors are propagated


It will be available in LibreOffice 3.6.