added mnStringNoValueError handling to ConvertStringToValue() (fdo#51442 dependency)

Change-Id: I05c2ddc0ebde6675e9f98722c4feb1ed49670dee
(cherry picked from commit 5f86b4be3c40180031aa723f5fa44a19595bffa8)